fix margin and spacing

--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -3,12 +3,11 @@
 }
 
 .card {
-  margin-top: 20px;
+  margin-top: 10px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 32px;
-  padding: 0 120px;
-  margin-left: 125px;
+  padding: 0 190px;
+  margin-left: 80px;
 }
 
 .grid-item {
@@ -18,6 +17,7 @@
   align-items: flex-start;
   background: #fff;
   border-radius: 4px;
+  margin-bottom: -15px;
 }
 
 .grid-item img {
