--- a/blocks/lineup-and-products/lineup-and-products.css
+++ b/blocks/lineup-and-products/lineup-and-products.css
@@ -1,7 +1,7 @@
 .lineup-and-products-wrapper {
   background-color: #f5f6f8;
-  margin-top: 30px;
-  padding-bottom: 75px;
+  margin-top: 20px;
+  padding-bottom: 45px;
 }
 
 .lineup-and-products-wrapper>h3 {
@@ -11,7 +11,7 @@
   color: #020920;
   font-weight: 400;
   font-family: 'Catamaran';
-  padding-top: 50px;
+  padding-top: 35px;
   padding-bottom: 10px;
 }
 
@@ -104,7 +104,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  margin-right: 200px;
+  margin-right: 190px;
   margin-top: -60px;
 }
 
